--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.71'
+    ext.koin_version = '1.0.2'
     repositories {
         google()
         jcenter()
