--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.20'
     ext.koin_version = '1.0.2'
     ext.nav_version = '1.0.0-alpha05'
+    ext.room_version = '1.1.1'
     repositories {
         google()
         jcenter()
